idf_component_register(
    SRCS
        "main.c"
        "os/os_alarm.c"
        "os/os.c"
        "lcd/lcd.c"
        "wifi/wifi.c"
        "webserver/webserver.c"
    INCLUDE_DIRS
        "."
        "os"
        "lcd"
        "wifi"
        "webserver"
    REQUIRES
        lvgl
        esp_wifi
        esp_netif
        nvs_flash
        esp_http_server
)

add_compile_definitions(LV_CONF_INCLUDE_SIMPLE)
